[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/Swole Kitten Undies.png.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/buttonStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/sfx/coins.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/sfx/menu_button_sound.wav" type="AudioStream" id=6]

[sub_resource type="Theme" id=1]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 200 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -450.0
margin_top = -500.0
margin_right = 450.0
alignment = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 900.0
margin_bottom = 465.0
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="Menu/CenterRow"]
margin_bottom = 465.0

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer2"]
margin_top = 232.0
margin_bottom = 232.0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 4.0
margin_right = 512.0
margin_bottom = 465.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Play" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 106.0
margin_right = 508.0
margin_bottom = 166.0
rect_min_size = Vector2( 360, 60 )
flat = true
icon_align = 1

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -164.0
rect_min_size = Vector2( 344, 0 )
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Play"
align = 1
valign = 1

[node name="Shop" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 170.0
margin_right = 508.0
margin_bottom = 230.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Shop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -680.0
rect_min_size = Vector2( 344, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Shop"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Menu/CenterRow/Buttons/Shop"]
stream = ExtResource( 4 )

[node name="Options" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 234.0
margin_right = 508.0
margin_bottom = 294.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -680.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Options"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Menu/CenterRow/Buttons/Options"]
stream = ExtResource( 6 )

[node name="Quit" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 298.0
margin_right = 508.0
margin_bottom = 358.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -680.0
rect_min_size = Vector2( 344, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Exit"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 516.0
margin_right = 900.0
margin_bottom = 465.0

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_top = 40.0
margin_right = 384.0
margin_bottom = 424.0
texture = ExtResource( 1 )

[node name="Credit" type="Label" parent="Menu"]
margin_top = 469.0
margin_right = 900.0
margin_bottom = 500.0
text = "Version 1.0
Created by Edan Steen"

[connection signal="pressed" from="Menu/CenterRow/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
